# openSPHASE

./: README.md
data/: couette.json  dambreak.json  dambreak_test.json  denting_water_inflow.json  denting_water_inflow_horizontal.json  flow_over_sill.json  hydro_tank.json  lobovsky.json  lobovsky_small.json  open_channel_inflow.json  out_of_scene.json  poleni.json  stirrer.json  tank_water_inflow.json  torricelli.json
data/dynamic_inflow/: inflow_fitting.opj  inflow_highres.csv  original_inflow.csv
data/multiphase/: air_inflow_experimental.json  bubble_column_rigid.json  bubble_merge.json  bubble_tank_small.json  dambreak.json  dambreak_collision.json  hydro_tank.json  poleni.json  single_air_inflow.json  sloshing_tank.json  tank_air_inflow.json
data/poiseuille/: poiseuille0175.json  poiseuille02.json  poiseuille025.json  poiseuille03.json  poiseuille035.json
particlegenerator/: CMakeLists.txt
particlegenerator/src/: CMakeLists.txt  particle2.h  particles.cpp  particles.h
prototype/: CMakeLists.txt
prototype/cmake/modules/: FindTBB.cmake
prototype/src/: CMakeLists.txt  getopt.h  hashgrid.h  icons.qrc  kernelcubic.h  kernelpoly6.h  kernelpressure.h  kernels.cpp  kernels.h  kernelspiky.h  kernelstd.h  kernelviscosity.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  neighbourdata.h  oo_kernels.h  particlerenderer.cpp  particlerenderer.h  scene2.cpp  scene2.h  sph.cpp  sph.h  sphthread.cpp  sphthread.h  stable.h  unigrid.cpp  unigrid.h
prototype/tests/: CMakeLists.txt  hashgrid_tests.cpp  kernel.cpp  matrix_tests.cpp  unigrid_tests.cpp  vector_tests.cpp
sceneparser/: CMakeLists.txt
sceneparser/src/: CMakeLists.txt  configuration.cpp  configuration.h  configurationparser.cpp  configurationparser.h  global.h  jsonparser.cpp  jsonparser.h  linesegment.h  matrix2.h  vector2.h
